--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,11 @@
     "mongoose": "^8.4.4",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "music-metadata": "^8.3.0",
+    "node-mfcc": "^0.0.2",
+    "node-wav": "^0.0.2",
     "nodemon": "^3.1.4",
+    "pitchfinder": "^2.3.2",
     "request": "^2.88.2"
   }
 }
