--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "node-wav": "^0.0.2",
     "nodemon": "^3.1.4",
     "pitchfinder": "^2.3.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "spotify-web-api-node": "^5.0.2"
   }
 }
