--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "material-ui-audio-player": "^1.0.0",
     "node-sass": "^9.0.0",
     "react": "^18.3.1",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.3.1",
     "react-h5-audio-player": "^3.9.3",
     "react-icons": "^5.2.1",
