--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "cosine-similarity": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.4",
